[package]
name = "simple-auth-server"
version = "0.3.0"
license="MPL-2.0+/LGPL-3.0+"
authors = ["mygnu <tech@gill.net.in>"]
edition = "2018"

[dependencies]
actix-identity = "0.1.0"
actix-web = "1.0.3"
argonautica = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.7"
futures = "0.1"
r2d2 = "0.8"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sparkpost = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }

